--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -569,7 +569,7 @@
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="{% static 'assets/img/ii.png'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="{% url 'blog:details' %}" <i class="bx bx-link"></i></a>
+                <a href="{% url 'blog:details' %}"  class="bx bx-link"></a>
               </div>
             </div>
           </div>
