--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -60,10 +60,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/tanvirislam.tamim.14" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/tanvirislam.tamim.14" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/tanvirislam.tamim.14" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/tanvirislam.tamim.14" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -87,7 +87,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>{{ object.profisson }}</h3>
           <p class="font-italic">
-            I am a Django boy . I have lot of experience python&Django in web development.Now I am working in (joiner Software engineer) in Mk7lan Team
+            I am a Django boy . I have lot of experience python&Django in web development.Now I am working in (joiner Software engineer) in Mk7lab Team
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -193,7 +193,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Html <i class="val">80%</i></span>
+            <span class="skill">Html <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -207,7 +207,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Problem solving <i class="val">55%</i></span>
+            <span class="skill">Problem solving <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -433,7 +433,7 @@
           <div class="resume-item">
             <h4>Junior software engineer(python) </h4>
             <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <p><em>khulna Bangladesh </em></p>
             <p>
             <ul>
               <li>Lead in the design, development, and implementation of the  layout, and production communication materials</li>
@@ -703,11 +703,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/tanvirislam.tamim.14" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/tanvirislam.tamim.14" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.facebook.com/tanvirislam.tamim.14" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.skype.com/Tamim khan" class="google-plus"><i class="bi bi-skype"></i></a>
+              <a href="https://www.facebook.com/tanvirislam.tamim.14" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -737,9 +737,6 @@
           <div class="col-md-6 form-group mt-3 mt-md-0">
             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
           </div>
-        </div>
-        <div class="form-group mt-3">
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
         </div>
         <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
