--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -549,12 +549,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="{% static 'assets/img/y.png'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/images (4).jpeg'%}" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 1</h4>
               <p>App</p>
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/y.png'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/images (4).jpeg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="{% url 'blog:details' %}"  title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -563,12 +563,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="{% static 'assets/img/ii.png'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/images (5).jpeg'%}" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/ii.png'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/images (5).jpeg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="{% url 'blog:details' %}"  class="bx bx-link"></a>
               </div>
             </div>
@@ -577,12 +577,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="{% static 'assets/img/portfolio/portfolio-3.jpg'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/portfolio/images (4).jpeg'%}" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 2</h4>
               <p>App</p>
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/portfolio/portfolio-3.jpg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/portfolio/images (4).jpeg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="{% url 'blog:details' %}"  title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -591,12 +591,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="{% static 'assets/img/portfolio/portfolio-4.jpg'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/portfolio/images (9).jpeg'%}" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 2</h4>
               <p>Card</p>
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/portfolio/portfolio-4.jpg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/portfolio/images (9).jpeg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="{% url 'blog:details' %}" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -661,12 +661,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="{% static 'assets/img/portfolio/portfolio-9.jpg'%}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/portfolio/download.jpeg'%}" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="{% static 'assets/img/portfolio/portfolio-9.jpg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="{% static 'assets/img/portfolio/download.jpeg'%}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="{% url 'blog:details' %}"  title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
