--- a/blog/templates/portfolio-details.html
+++ b/blog/templates/portfolio-details.html
@@ -53,15 +53,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="{% static 'assets/img/portfolio/portfolio-details-1.jpg'%}" alt="">
+                  <img src="{% static 'assets/img/portfolio/download.jpeg'%}" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="{% static 'assets/img/portfolio/portfolio-details-2.jpg'%}" alt="">
+                  <img src="{% static 'assets/img/portfolio/images (9).jpeg'%}" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="{% static 'assets/img/portfolio/portfolio-details-3.jpg'%}" alt="">
+                  <img src="{% static 'assets/img/portfolio/images (4).jpeg'%}" alt="">
                 </div>
 
               </div>
@@ -76,7 +76,7 @@
               <li><strong>Category</strong>: Web development</li>
               <li><strong>Client</strong>: Mk7Lab</li>
               <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="">www.mk7lab.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://www.mk7lab.com/">www.mk7lab.com</a></li>
             </ul>
 
             <p>
